--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,18 @@ justify-content: space-between;
   cursor:pointer;
 }
 
+#neighbourhoodView .chart-container{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  margin-left:0;
+}
+
+#neighbourhoodView .chart-container .chart-container-container{
+  width:50%;
+}
+
 
 
 
